# QuadraticSieve

./: CMakeLists.txt  main.cpp  quadratic_sieve.cpp  quadratic_sieve.hpp
CMake/Modules/: FindGMP.cmake
